gcc/gcc/testsuite/algol60.dg/fail/dupdecl1.a60
'comment' { dg-do compile } ;
'begin'
 'integer' a, b, c, d;
 'real' a; 'comment' { dg-error "duplicate identifier" } ;
'end';
